# multi_arm_coordination

./: README.md
franka_coord/: CMakeLists.txt  package.xml
franka_coord/launch/: control_offline.launch  control_online.launch  coord_offline.launch  coord_offline_nr.launch  coord_offline_nr_rm.launch  coord_offline_rm.launch  coord_online.launch  coord_online_rm.launch  give_goals.launch  give_goals_r1.launch  give_goals_r2.launch  give_goals_r3.launch
franka_coord/msg/: CoordTraj.msg  TrajPara.msg
franka_coord/src/: control_offline.cpp  control_offline_rm_r1.cpp  control_online.cpp  control_online_rm_r1.cpp  coord_offline_all.cpp  coord_offline_two_rm.cpp  coord_offline_two_simu.cpp  coord_online_all.cpp  coord_online_two_rm.cpp  coord_online_two_simu.cpp  give_goal_nr.cpp  motion_generation.cpp  motion_generation.h  read_state_r1.cpp  read_state_simu.cpp
franka_coord/srv/: CoordTwoTrajs.srv  GiveGoal.srv  ReadState.srv  SendTrajPara.srv  SendTwoTrajs.srv
